--- a/Untitled.ipynb
+++ b/Untitled.ipynb
@@ -15,7 +15,7 @@
     "from keras.preprocessing.image import ImageDataGenerator\n",
     "from keras.models import Sequential\n",
     "from keras.layers import Conv2D, MaxPooling2D\n",
-    "from keras.layers import Activation, Dropout, Flatten, Dense\n",
+    "from keras.layers import Activation, Dropout, Flatten, Densech\n",
     "from tensorflow.keras.utils import to_categorical\n"
    ]
   },
